discussion/kv_engine/179398/179398_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Pull ItemFrequencyDecayer wake functions into one location

We will change the behaviour for buckets sharing memory in a future
change so having only one code path makes this easier.

Change-Id: Ic0a05fccc6d977b63e1a8f346811963272d168b7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:38:32.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:53:38.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19833/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:27:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19833/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19833/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48767/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(27): fatal error C1083: Cannot open include file: "memcached/bucket_memory_manager.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48767/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40994/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40994/ )

CMake error: CMakeLists.txt:166 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40994/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9528/ : FAILURE

Compile error at [2022-08-31T08:42:50.831Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9528/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21076/ : FAILURE

Compile error at [2022-08-31T08:45:59.161Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21076/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9627/ : FAILURE

Compile error at [2022-08-31T08:41:10.162Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21785/ : FAILURE

Compile error at [2022-08-31T08:48:29.675Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21785/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22137/ : FAILURE

Compile error at [2022-08-31T08:51:37.269Z] ../kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22137/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22874/ : FAILURE

Compile error at [2022-08-31T08:51:42.471Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22874/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30166/ : FAILURE

Compile error at [2022-08-31T08:52:29.778Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30166/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19055/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
